Add background color to contact-section

--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -36,7 +36,8 @@ $default-font-color: #4d4d4d;
 $blue: #0a94b8;
 $yellow: #fff701;
 
-$clouds: #f5f7fa;
+// $clouds: #f5f7fa;
+$clouds: #f3f3f3;
 $clouds-dark: #e6e9ed;
 
 $silver: #ccd1d9;
