--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -134,7 +134,7 @@ strong {
 					color: #fff;
 					font-size: 16px;
 					text-align: right;
-					padding: 0 20px;
+					padding-right: 20px;
 				}
 
 				a {
