Thicken the border between session line & workshop line

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -1433,6 +1433,10 @@ strong {
 
 		.session-block {
 
+			@include media($s-screen) {
+				border-right: 1px solid $blue;
+			}
+
 			.clock {
 
 				@include media($s-screen) {
