--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 	<p class="copyright">© DojoCon Japan 2016</p>
 </footer>
 
+<script src="https://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" type="text/javascript"></script>
 </body>
 </html>
