--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -1110,9 +1110,11 @@ strong {
 		}
 
 		.map {
-			background: url("//placehold.it/600x400/e9e8dc?text=Google+Maps") no-repeat center;
-			background-size: cover;
 			height: 200px;
+
+			@include media($s-screen) {
+				height: 400px;
+			}
 		}
 	}
 }
