--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,10 @@ layout: default
 ---
 
 <header class="post-header">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+	<h1 class="post-title">{{ page.title }}</h1>
+	<p class="post-meta">{{ page.date | date: "%Y.%m.%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 </header>
 
 <article class="post-content">
-  {{ content }}
+	{{ content }}
 </article>
-
