--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,9 @@ layout: default
 <header class="post-header">
 	<h1 class="post-title">{{ page.title }}</h1>
 	<p class="post-meta">{{ page.date | date: "%Y.%m.%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+	{% if page.thumbnail %}
+		<p class="post-thumbnail"><img src="{{ page.thumbnail }}" alt="{{ page.title }}"></p>
+	{% endif %}
 </header>
 
 <article class="post-content">
