--- a/assets/_sass/_post.scss
+++ b/assets/_sass/_post.scss
@@ -1,8 +1,53 @@
 .post-header {
 	@include outer-container;
-	margin: 80px 0 1.75em;
+	margin: 30px 0 1.75em;
 	padding: 0 20px;
 	text-align: center;
+
+	.page-title {
+		color: $blue;
+		display: inline-block;
+		margin-bottom: 20px;
+		position: relative;
+
+		@include blockly-divider(begin, before) {
+			@include position(absolute, 33px auto auto -5px);
+			font-size: .5 * 81px;
+
+			@include media($s-screen) {
+				top: 96px;
+			}
+		}
+
+		@include blockly-divider(end, after) {
+			@include position(absolute, 33px -5px auto auto);
+			font-size: .5 * 81px;
+
+			@include media($s-screen) {
+				top: 96px;
+			}
+		}
+
+		.en {
+			display: block;
+			font-family: $oswald;
+			font-size: 22px;
+			// font-weight: bold;
+			overflow: hidden;
+			padding: 0 5px;
+			position: relative;
+			text-transform: uppercase;
+
+			@include blockly-divider(middle, before) {
+				@include position(absolute, 33px auto auto (.5 * 81 - 5.5px));
+				font-size: .5 * 81px;
+
+				@include media($s-screen) {
+					top: 96px;
+				}
+			}
+		}
+	}
 
 	.post-title {
 		font-size: 24px;
