--- a/assets/_sass/_post.scss
+++ b/assets/_sass/_post.scss
@@ -1,6 +1,7 @@
 .post-header {
 	@include outer-container;
-	margin: 30px 0 1.75em;
+	margin-top: 30px;
+	margin-bottom: $line-height-px;
 	padding: 0 20px;
 	text-align: center;
 
