Add link styles

--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -17,9 +17,11 @@ a {
 p {
 
 	a {
+		color: #000;
 		text-decoration: underline;
 
 		&:hover {
+			color: inherit;
 			text-decoration: none;
 		}
 	}
