--- a/assets/_sass/_post.scss
+++ b/assets/_sass/_post.scss
@@ -79,7 +79,7 @@
 
 .post-content {
 	@include outer-container;
-	padding: 0 20px;
+	padding: 0 20px 150px;
 
 	h2 {
 		border-bottom: 1px solid $clouds-dark;
