Add XL screen style of news single post

--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -341,7 +341,7 @@ strong {
 		&.scrolled {
 
 			@include media($xl-screen) {
-				background: #f3f3f3;
+				background: $clouds;
 			}
 
 			.nav {
