--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
 <meta name="twitter:image" content="{% if page.ogp_image %}{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.ogp_image }}{% else %}{{ site.url }}{{ site.baseurl }}/assets/images/ogp.png{% endif %}">
 </head>
-<body id="pagetop">
+<body id="pagetop" class="{% if page.url == homeurl %}home{% elsif page.layout == 'post' %}post{% else %}page{% endif %}">
 
 {% if jekyll.environment == 'production' %}
 <script>
