Improve the link of home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
 		</div>
 		<nav class="nav">
 			<ul><!--
-			 --><li><a href="{{ '/' | prepend: site.baseurl }}#pagetop">Home</a></li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}{% if page.url == homeurl %}#pagetop{% endif %}">Home</a></li><!--
 			 --><li><a href="{{ '/' | prepend: site.baseurl }}#about" class="child-menu-trigger js-child-menu-trigger" data-icon="＋">About</a>
 						<ul class="child-menu js-child-menu">
 							<li><a href="{{ '/' | prepend: site.baseurl }}#about">About</a></li>
