Add shadow to the fixed menu

--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -342,6 +342,7 @@ strong {
 
 			@include media($xl-screen) {
 				background: $clouds;
+				box-shadow: 0 0 10px rgba(#000, .2);
 			}
 
 			.nav {
