--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -7,6 +7,7 @@
 @import "icons";
 @import "blockly-divider";
 @import "reset";
+@import "fancybox";
 @import "components";
 @import "common";
 @import "index";
