--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -533,3 +533,61 @@ strong {
 .fancybox-skin {
 	border-radius: 0;
 }
+
+.fancybox-close {
+	@include size(40px);
+	background: none;
+	line-height: 40px;
+	right: 0;
+	text-align: center;
+	top: 0;
+
+	@include dojoicon(close);
+
+	@include media($s-screen) {
+		font-size: 22px;
+		right: 20px;
+		top: 20px;
+	}
+}
+
+.fancybox-nav {
+	display: inline-block;
+	height: auto;
+	top: 90px;
+	width: auto;
+
+	@include media($s-screen) {
+		top: 50%;
+	}
+}
+
+.fancybox-nav span {
+	@include position(relative, auto);
+	@include size(30px 75px);
+	background: $blue;
+	color: #fff;
+	display: inline-block;
+	font-size: 24px;
+	line-height: 75px;
+	margin-top: 0;
+	text-align: center;
+	visibility: visible;
+
+	@include media($s-screen) {
+		@include size(40px 100px);
+		font-size: 32px;
+		line-height: 100px;
+		margin-top: -50%;
+	}
+}
+
+.fancybox-prev span {
+
+	@include dojoicon(chevron-left);
+}
+
+.fancybox-next span {
+
+	@include dojoicon(chevron-right);
+}
