--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -810,6 +810,144 @@
 	}
 }
 
+.speaker-profile-box {
+	@include outer-container;
+	background: #fff;
+	color: $default-font-color;
+	display: none;
+	padding: 40px 20px;
+	text-align: center;
+
+	@include media($s-screen) {
+		padding: 80px 80px;
+		text-align: left;
+	}
+
+	@include media($m-screen) {
+		padding: 80px 100px;
+		text-align: left;
+	}
+
+	.speaker-profile-box-left {
+
+		@include media($s-screen) {
+			@include span-columns(3.8);
+		}
+
+		@include media($m-screen) {
+			@include span-columns(3.8);
+		}
+	}
+
+	.speaker-profile-box-right {
+
+		@include media($s-screen) {
+			@include span-columns(7.2);
+			@include shift(1);
+		}
+
+		@include media($m-screen) {
+			@include span-columns(7.2);
+			@include shift(1);
+		}
+	}
+
+	.speaker-avator {
+		@include size(180px);
+		border-radius: 180px;
+		margin: 0 auto 40px;
+		overflow: hidden;
+
+		@include media($s-screen) {
+			@include size(160px);
+			border-radius: 160px;
+		}
+
+		@include media($m-screen) {
+			@include size(200px);
+			border-radius: 200px;
+		}
+	}
+
+	.speaker-profile-box-label {
+		background: $default-font-color;
+		border-radius: 4px;
+		color: #fff;
+		display: inline-block;
+		font-size: 13px;
+		font-weight: $regular;
+		margin-bottom: 10px;
+		padding: 0 1.5em;
+		text-align: center;
+		text-transform: uppercase;
+	}
+
+	.session-title {
+		font-size: 16px;
+		font-weight: $medium;
+	}
+
+	.session-time {
+		font-size: 16px;
+		font-weight: $thin;
+	}
+
+	.speaker-name {
+		font-size: 22px;
+		font-weight: $medium;
+		margin-top: 20px;
+
+		@include media($s-screen) {
+			display: inline-block;
+			margin-right: 40px;
+			margin-top: 0;
+		}
+	}
+
+	.speaker-sns {
+
+		@include media($s-screen) {
+			display: inline-block;
+		}
+
+		> li {
+			display: inline-block;
+			margin: 5px;
+			vertical-align: middle;
+		}
+
+		[class^="icon-"], [class*=" icon-"] {
+			font-size: 28px;
+			line-height: 1;
+			opacity: .6;
+
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+
+	.speaker-description {
+		font-size: 18px;
+		font-weight: $thin;
+	}
+
+	.speaker-profile {
+		font-size: 14px;
+		font-weight: $light;
+		margin-top: 1em;
+		text-align: left;
+
+		p {
+			margin-bottom: .5 * $line-height * 1em;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
 .sponsor-section {
 	background: linear-gradient(darken($blue, 3) 50%, $yellow 50%);
 	position: relative;
