--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -578,7 +578,7 @@ strong {
 		@include size(40px 100px);
 		font-size: 32px;
 		line-height: 100px;
-		margin-top: -50%;
+		margin-top: -50px;
 	}
 }
 
