Comment out the css of .sns-id

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1536,10 +1536,10 @@
 		}
 	}
 
-	.sns-id {
-		font-size: 24px;
-		font-weight: $thin;
-		margin-top: 40px;
-		text-align: center;
-	}
+	// .sns-id {
+	// 	font-size: 24px;
+	// 	font-weight: $thin;
+	// 	margin-top: 40px;
+	// 	text-align: center;
+	// }
 }
