Add page share links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer class="footer">
+	<div class="page-share">
+		<ul class="share-links">
+			<li class="facebook"><a href="">Facebook</a></li>
+			<li class="twitter"><a href="">Twitter</a></li>
+			<li class="line"><a href="">LINE</a></li>
+		</ul>
+	</div>
 	<div class="site-share">
 		<ul class="share-links icon-share">
 			<li><a href="https://www.facebook.com/sharer.php?u={{ '/' | prepend: site.url }}" class="icon-facebook-circle" target="_blank"></a></li>
