--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -45,3 +45,7 @@ $silver-dark: #aab2bd;
 
 $gray: #656d78;
 $gray-dark: #434a54;
+
+$facebook_brand_color: #4963a1;
+$twitter_brand_color: #58abe8;
+$line_brand_color: #25bd62;
