Add hover effect

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1029,6 +1029,16 @@
 				z-index: -1;
 			}
 		}
+
+		a {
+
+			&:hover {
+
+				img {
+					opacity: .7;
+				}
+			}
+		}
 	}
 
 	.gold-sponsors {
