--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -51,7 +51,7 @@
 
 <!-- Speaker Profile -->
 
-<div id="okada-hiroyuki" class="speaker-profile-box">
+<div id="okada-hiroyuki" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
@@ -74,7 +74,7 @@
 	</div>
 </div>
 
-<div id="okada-hiroyuki-2" class="speaker-profile-box">
+<div id="okada-hiroyuki-2" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
