--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -814,7 +814,7 @@
 	@include outer-container;
 	background: #fff;
 	color: $default-font-color;
-	display: none;
+	// display: none;
 	padding: 40px 20px;
 	text-align: center;
 
