--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -49,7 +49,7 @@
 	</li>
 </ul>
 
-<!-- Speaker Profile -->
+<!-- Speaker Profiles -->
 
 <div id="okada-hiroyuki" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
