Add one more speaker sample profile

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -21,7 +21,7 @@
 		</figure>
 		<h2 class="speaker-name">岡田 裕行</h2>
 		<p class="speaker-description">BlocklyDuino</p>
-		<p><a href="" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+		<p><a href="#okada-hiroyuki-3" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -75,6 +75,29 @@
 </div>
 
 <div id="okada-hiroyuki-2" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
+		<p class="session-time">13:00-13:25</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">岡田 裕行</h2>
+		<ul class="speaker-sns">
+			<li><a href="" class="icon-facebook-circle"></a></li>
+			<li><a href="" class="icon-twitter-circle"></a></li>
+		</ul>
+		<p class="speaker-description">BlocklyDuino</p>
+		<div class="speaker-profile">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione eius sapiente iusto aliquid error itaque voluptas corporis molestias. Adipisci, pariatur!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, voluptates.</p>
+		</div>
+	</div>
+</div>
+
+<div id="okada-hiroyuki-3" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
