Fix the jaggies of skew in Chrome

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -997,6 +997,7 @@
 .sponsor-section {
 	background: linear-gradient(darken($blue, 3) 50%, $yellow 50%);
 	position: relative;
+	transform: skewY(0);
 
 	&:before {
 		@include position(absolute, 0);
