Add sponsorship PDF. Fix #10

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1155,6 +1155,10 @@
 		}
 	}
 
+	.become-a-sponsor-outer {
+		text-align: center;
+	}
+
 	.become-a-sponsor {
 		box-shadow: none;
 		font-size: 18px;
