Add TimeTable session Text DOJOCON-286

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -72,9 +72,9 @@
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="阿部和広のプロフィール画像">
 		</figure>
-		<!-- <p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
-		<p class="session-time">13:00-13:25</p> -->
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">基調講演</h3>
+		<p class="session-time">10:40-11:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">阿部 和広</h2>
